# Test

./: .gitmodules  CMakeLists.txt  E-Technik_II.fdb_latexmk  E-Technik_II.fls  E-Technik_II.tex  LICENSE  setup.sh  start_gui.sh
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh  start-desktop.sh
data/: output.txt
src/: main.c
